fix ogg and Auto suggestions